Bug#31435 ha_innodb.cc:3983: ulint convert_search_mode_to_innobase(ha_rkey_function): Asse     I think we don't need to issue an error statement in the convert_search_mode_to_innobase().     Returning the PAGE_CUR_UNSUPP value is enough as allows to handle this     case depending on the requirements.

per-file comments:
  sql/ha_innodb.cc 
Bug#31435 ha_innodb.cc:3983: ulint convert_search_mode_to_innobase(ha_rkey_function): Asse 
     no error issued in convert_search_mode_to_innobase.
     ha_innobase::records_in_range() returns HA_POS_ERROR if search mode isn't supported.