sql/ha_innodb.cc
@@ -3723,7 +3723,6 @@ convert_search_mode_to_innobase(
 		case HA_READ_MBR_WITHIN:
 		case HA_READ_MBR_DISJOINT:
 		case HA_READ_MBR_EQUAL:
-			my_error(ER_TABLE_CANT_HANDLE_SPKEYS, MYF(0));
 			return(PAGE_CUR_UNSUPP);
 		/* do not use "default:" in order to produce a gcc warning:
 		enumeration value '...' not handled in switch
@@ -5204,7 +5203,7 @@ ha_innobase::records_in_range(
 						      mode2);
 	} else {
 
-		n_rows = 0;
+		n_rows = HA_POS_ERROR;
 	}
 
 	dtuple_free_for_mysql(heap1);
